--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Projects
     <ul>
     	<li><a href="https://www.behance.net/jcentenocie47f/"> Project 1 </a> </li>
-      <li><a href="https://www.behance.net/jcentenocie47f/"> Project 2 </a></li>
+      <li><a href="https://cobycid.github.io/interactivemedia323/project2level1/variation1/"> Project 2 </a></li>
     </ul>
   </p>
   <p>
