--- a/project2level2/variation4/line3/index.html
+++ b/project2level2/variation4/line3/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<p>&nbsp;</p>
-	<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2level2/variation4/line4/index.html"><h1>Life is a broken-winged bird</h1></a>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/line4/"><h1>Life is a broken-winged bird</h1></a>
 
 </body>
 
