--- a/project2level2/variation4/line8/index.html
+++ b/project2level2/variation4/line8/index.html
@@ -14,7 +14,7 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2level2/variation4/line1/index.html"><h1>Frozen with snow.</h1></a>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/line1/"><h1>Frozen with snow.</h1></a>
 
 </body>
 
