--- a/project2level2/variation4/line1/index.html
+++ b/project2level2/variation4/line1/index.html
@@ -9,7 +9,7 @@
 
 	<div>
 	<p>&nbsp;</p>
-	<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2level2/variation4/line2/index.html"><h1>Hold fast to dreams</h1></a>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/line2/"><h1>Hold fast to dreams</h1></a>
 	</div>
 
 </body>
