--- a/project2level2/variation4/line2/index.html
+++ b/project2level2/variation4/line2/index.html
@@ -13,7 +13,7 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2level2/variation4/line3/index.html"><h1>For if dreams die.</h1></a>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/line3/"><h1>For if dreams die.</h1></a>
 	
 
 </body>
