variation changes and last level 3

--- a/project2level3/variation3/index.html
+++ b/project2level3/variation3/index.html
@@ -58,10 +58,10 @@
     background: white;
     color: gray;
     height: 35px;
-    width: 1230px;
+    width: 100%;
     text-align: center;
     position: relative;
-    top: 360px;
+    top: 500px;
     left: 0px;
     margin: 0px;
   }
