--- a/project2level3/variation4/index.html
+++ b/project2level3/variation4/index.html
@@ -11,7 +11,7 @@
 
   #line1 {
     background-color: lightgray;
-    width: 1300px;
+    width: 100%;
     text-align: center;
     position: fixed;
     display: block;
@@ -91,7 +91,7 @@
     float: right;
   }
   #line8 {
-    width: 1250px;
+    width: 100%;
     background: lightgray;
     color: white;
     text-align: center;
