--- a/project2level3/variation5/index.html
+++ b/project2level3/variation5/index.html
@@ -6,38 +6,94 @@
   <style>
 
   #canvas{
-    
+    width: 2500px;
+  }
+
+  #header{
+    background-color: lightgray;
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    display: block;
+    z-index: 5;
   }
 
   #box1 {
-    border: 100px solid navy;
-    background: lightblue;
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
     text-align: center;
     display: inline-block;
     position: relative;
+    top: 200px;
+    padding: 30px;
+    margin: 100px;
   }
 
   #box2 {
-    border: 100px solid navy;
-    background: lightblue;
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
     text-align: center;
     display: inline-block;
     position: relative;
+    top: 225px;
+    padding: 30px;
+    margin: 100px;
   }
 
   #box3 {
-    border: 100px solid navy;
-    background: lightblue;
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
     text-align: center;
     display: inline-block;
     position: relative;
+    top: 200px;
+    padding: 30px;
+    margin: 100px;
   }
+
   #box4 {
-    border: 100px solid navy;
-    background: lightblue;
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
     text-align: center;
     display: inline-block;
     position: relative;
+    top: 200px;
+    padding: 30px;
+    margin: 100px;
+  }
+
+  #box5 {
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    top: 200px;
+    padding: 30px;
+    margin: 100px;
+  }
+
+  #box6 {
+    border: 10px solid lightgray;
+    background: gray;
+    height: 180px;
+    width: 110px;
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    top: 200px;
+    padding: 30px;
+    margin: 100px;
   }
 
   </style>
@@ -45,22 +101,34 @@
 
 <body>
 
-  <div id= "canvas" align="center">
+  <div id= "canvas">
+
+  <div id="header">
+    <h1>Hold fast to dreams</h1>
+  </div>
 
   <div id="box1">
-    <h1>Hold fast to dreams</h1>
+    <h3><em>For if dreams die.</em></h3>
   </div>
 
   <div id="box2">
-    <h1>For if dreams die.<br>Life is a broken-winged bird<br>That cannot fly.<h1>
+    <h3><em>Life is a broken-winged bird</em></h3>
   </div>
 
   <div id="box3">
-    <h1>Hold fast to dreams</h1>
+    <h3><em>That cannot fly.</em></h3>
   </div>
 
   <div id="box4">
-    <h1>For when dreams go.<br>Life is a barren field<br>Frozen with snow.</h1>
+    <h3><em>For when dreams go.</em></h3>
+  </div>
+
+  <div id="box5">
+    <h3><em>Life is a barren field</em></h3>
+  </div>
+
+<div id="box6">
+    <h3><em>Frozen with snow.</em></h3>
   </div>
 
 
