Navi Link corrects

--- a/project2navigation/index.html
+++ b/project2navigation/index.html
@@ -20,23 +20,23 @@
 
 	<div id"main" align="center">
 		<div id"level1">
-			<h1><a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2navigation/level1/index.html">O N E</a></h1>
+			<h1><a href="https://cobycid.github.io/interactivemedia323/project2navigation/level1/">O N E</a></h1>
 		</div>
 
 		<div id"level2">
-			<h1><a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2navigation/level1/index.html">T W O</a></h1>
+			<h1><a href="https://cobycid.github.io/interactivemedia323/project2navigation/level2/">T W O</a></h1>
 		</div>
 
 		<div id"level3">
-			<h1><a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2navigation/level1/index.html">T H R E E</a></h1>
+			<h1><a href="https://cobycid.github.io/interactivemedia323/project2navigation/level3/">T H R E E</a></h1>
 		</div>
 
 		<div id"level4">
-			<h1><a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2navigation/level1/index.html">F O U R</a></h1>
+			<h1><a href="https://cobycid.github.io/interactivemedia323/project2navigation/level4/">F O U R</a></h1>
 		</div>
 
 		<div id"level5">
-			<h1><a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project2navigation/level1/index.html">F I V E</a></h1>
+			<h1><a href="https://cobycid.github.io/interactivemedia323/project2navigation/level5/">F I V E</a></h1>
 		</div>
 	</div>
 
