variation 1 With buttons

--- a/project2level1/variation1/index.html
+++ b/project2level1/variation1/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <title>Project 2: Level 1</title>
+  <style>
+ 	.square {
+  	position: fixed;
+  	bottom: 20px;
+  	right:20px;
+	width: 40px;
+	height: 40px;
+	background: black;
+}
+
+	.squareback {
+  	position: fixed;
+  	bottom: 20px;
+  	right:70px;
+	width: 40px;
+	height: 40px;
+	background: gray;
+}
+     
+
+  </style>
 </head>
 
 <body>
+		<a href="https://cobycid.github.io/interactivemedia323/project2level1/variation2/"><div class="object square"></div></a>
+
+		<a href="https://cobycid.github.io/interactivemedia323/project2navigation/"><div class="object squareback"></div></a>
 
 	<p>Hold fast to dreams</p>
 	<p>For if dreams <p>&nbsp;</p> <p>&nbsp;</p> &nbsp; &nbsp; &nbsp; die.</p>
