--- a/project2level1/variation4/index.html
+++ b/project2level1/variation4/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <title>Project 2: Level 1d</title>
+   <style>
+ 	.square {
+  	position: fixed;
+  	bottom: 20px;
+  	right:20px;
+	width: 40px;
+	height: 40px;
+	background: black;
+}
+
+	.squareback {
+  	position: fixed;
+  	bottom: 20px;
+  	right:70px;
+	width: 40px;
+	height: 40px;
+	background: gray;
+}
+     
+
+  </style>
 </head>
 
 <body>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level1/variation5/"><div class="object square"></div></a>
+
+		<a href="https://cobycid.github.io/interactivemedia323/project2level1/variation4/"><div class="object squareback"></div></a>
 
 <p>&nbsp;&nbsp;</p><p>&nbsp;&nbsp;</p>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;That cannot fly.</p>
