--- a/project2level2/variation3/index.html
+++ b/project2level2/variation3/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <title>Project 2: Level 2c</title>
+  <style>
+ 	.square {
+  	position: fixed;
+  	bottom: 20px;
+  	right:20px;
+	width: 40px;
+	height: 40px;
+	background: black;
+}
+
+	.squareback {
+  	position: fixed;
+  	bottom: 20px;
+  	right:70px;
+	width: 40px;
+	height: 40px;
+	background: gray;
+}
+     
+
+  </style>
 </head>
 
 <body>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/line1/"><div class="object square"></div></a>
+
+		<a href="https://cobycid.github.io/interactivemedia323/project2level2/variation2/"><div class="object squareback"></div></a>
 
 <div align="center">
 	<h1>Hold</h1>
