--- a/project2level3/variation1/index.html
+++ b/project2level3/variation1/index.html
@@ -4,6 +4,23 @@
 <head>
   <title>Project 2: Level 3a</title>
   <style>
+  .square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 
     #canvas{
       width: 1500px;
@@ -120,6 +137,9 @@
 </head>
 
 <body>
+  <a href="https://cobycid.github.io/interactivemedia323/project2level3/variation2/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level2/variation4/"><div class="object squareback"></div></a>
 
 <div id="canvas">
 
