--- a/project2level3/variation2/index.html
+++ b/project2level3/variation2/index.html
@@ -4,6 +4,23 @@
 <head>
   <title>Project 2: Level 3b</title>
   <style>
+  .square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 
   #canvas{
     width: 5500px;
@@ -88,6 +105,9 @@
 </head>
 
 <body>
+   <a href="https://cobycid.github.io/interactivemedia323/project2level3/variation3/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level3/variation1/"><div class="object squareback"></div></a>
 
   <div id= "canvas">
 
