--- a/project2level4/variation3/index.html
+++ b/project2level4/variation3/index.html
@@ -4,6 +4,23 @@
 <head>
   <title>Project 2: Level 4c</title>
   <style>
+  .square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 
     #canvas{
       width: 2300px;
@@ -69,6 +86,9 @@
 </head>
 
 <body>
+  <a href="https://cobycid.github.io/interactivemedia323/project2level4/variation4/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level4/variation2/"><div class="object squareback"></div></a>
 
 <div id="canvas" align="center">
 
