--- a/project2level4/variation5/index.html
+++ b/project2level4/variation5/index.html
@@ -4,6 +4,23 @@
 <head>
   <title>Project 2: Level 4e</title>
   <style>
+  .square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 
     #canvas{
    
@@ -152,6 +169,9 @@
 </head>
 
 <body>
+  <a href="https://cobycid.github.io/interactivemedia323/project2level5/variation1/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level4/variation4/"><div class="object squareback"></div></a>
 
 <div id="canvas">
 
