level 5 with buttons

--- a/project2level5/variation1/index.html
+++ b/project2level5/variation1/index.html
@@ -4,6 +4,24 @@
 <head>
   <title>Project 2: Level 5a</title>
   <style>
+  .square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
+
 
  #canvas{
 
@@ -79,6 +97,9 @@
 </head>
 
 <body>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level5/variation2/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level4/variation5/"><div class="object squareback"></div></a>
 
 	<div id="canvas">
 
