--- a/project2level5/variation2/index.html
+++ b/project2level5/variation2/index.html
@@ -3,6 +3,23 @@
 <head>
 	<title>Project 2: Level 5b</title>
 <style> 
+.square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 #poem1 {
 	position: absolute;
 	display: block;
@@ -45,6 +62,9 @@
 </style>
 </head>
 <body>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level5/variation3/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level5/variation1/"><div class="object squareback"></div></a>
 
 <div id="poem1">
 Hold fast to dreams. For if dreams die. Life is a broken-winged bird. That cannot fly. Hold fast to dreams. For when dreams go. Life is a barren field. Filled with snow. Hold fast to dreams. For if dreams die. Life is a broken-winged bird. That cannot fly. Hold fast to dreams. For when dreams go. Life is a barren field. Filled with snow. Hold fast to dreams. For if dreams die. Life is a broken-winged bird. That cannot fly. Hold fast to dreams. For when dreams go. Life is a barren field. Filled with snow.
