--- a/project2level5/variation5/index.html
+++ b/project2level5/variation5/index.html
@@ -185,6 +185,9 @@
 </head>
 
 <body>
+  <a href="https://cobycid.github.io/interactivemedia323/project2level1/variation1/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level5/variation4/"><div class="object squareback"></div></a>
 
 <div id="canvas">
 
