--- a/project2level5/variation3/index.html
+++ b/project2level5/variation3/index.html
@@ -7,6 +7,23 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 <style> 
+.square {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+
+  .squareback {
+    position: fixed;
+    bottom: 20px;
+    right:70px;
+  width: 40px;
+  height: 40px;
+  background: gray;
+}
 
 #canvas{
 	background-color: darkorange;
@@ -86,6 +103,9 @@
 </head>
 
 <body>
+	<a href="https://cobycid.github.io/interactivemedia323/project2level5/variation4/"><div class="object square"></div></a>
+
+    <a href="https://cobycid.github.io/interactivemedia323/project2level5/variation2/"><div class="object squareback"></div></a>
 
 	<div id="canvas">
 
