--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
     	<li><a href="https://www.behance.net/jcentenocie47f/"> Project 1 </a> </li>
       <li><a href="https://cobycid.github.io/interactivemedia323/project2navigation/"> Project 2 </a></li>
+      <li><a href="https://cobycid.github.io/interactivemedia323/project2navigation/"> Project 3 </a></li>
     </ul>
   </p>
   <p>
