--- a/project3/page1/index.html
+++ b/project3/page1/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Project 3: Post-Racial Era?</title>
+  <title>Project 3: Post-Racial Era? p1</title>
 
   <style>
 
@@ -24,7 +24,7 @@
 
 
 <body>
-		<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page2/index.html"><h1>Post-Racial Era?</h1></a>
+		<a href="https://cobycid.github.io/interactivemedia323/project3/page2/"><h1>Post-Racial Era?</h1></a>
 
 </body>
 
