--- a/project3/page10/index.html
+++ b/project3/page10/index.html
@@ -58,7 +58,7 @@ the woman standing there yells,<br>
 at the top of her lungs,</h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page11/index.html"><p>Get away from my house!</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page11/"><p>Get away from my house!</p></a>
 </div>
 
 
