--- a/project3/page11/index.html
+++ b/project3/page11/index.html
@@ -55,7 +55,7 @@ p{
 <a href="#link1"><h5>What are you doing in my yard?</h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page12/index.html"><p>It’s as if a wounded Doberman pinscher or a 
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page12/"><p>It’s as if a wounded Doberman pinscher or a 
 German shepherd has gained the power of speech.<br>
 And though you back up a few steps, you manage 
 to tell her you have an appointment.</p></a>
