--- a/project3/page12/index.html
+++ b/project3/page12/index.html
@@ -56,7 +56,7 @@ p{
 <a href="#link1"><h5>You have an appointment?</h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page13/index.html"><p>she spits back.<br> Then she pauses.<br>Everything pauses.</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page13/"><p>she spits back.<br> Then she pauses.<br>Everything pauses.</p></a>
 </div>
 
 
