--- a/project3/page13/index.html
+++ b/project3/page13/index.html
@@ -57,7 +57,7 @@ p{
 <a href="#link1"><h5>OH,</h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page14/index.html"><p>she says</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page14/"><p>she says</p></a>
 </div>
 
 
