--- a/project3/page14/index.html
+++ b/project3/page14/index.html
@@ -46,7 +46,7 @@ p{
 <div class="tab">
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pagechorus3/index.html"><p>followed by, oh, yes, that’s right.<br>I am sorry<br>I am so sorry,<br>so<br>so sorry.</p></a> 
+  <a href="https://cobycid.github.io/interactivemedia323/project3/pagechorus3/"><p>followed by, oh, yes, that’s right.<br>I am sorry<br>I am so sorry,<br>so<br>so sorry.</p></a> 
 </div>
 
 </div>
