--- a/project3/page16/index.html
+++ b/project3/page16/index.html
@@ -47,7 +47,7 @@ p{
 <div class="tab">
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page17/index.html"><p>“Do you think two minutes<br>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page17/"><p>“Do you think two minutes<br>
 from the end of a World<br>
 Cup final, two minutes<br> 
 from the end of my career,<br> 
