--- a/project3/page17/index.html
+++ b/project3/page17/index.html
@@ -64,7 +64,7 @@ p{
 <div class="tab">
 
 <div id="pic">
-<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page18/index.html"><img src="images/05.jpg"></a>
+<a href="https://cobycid.github.io/interactivemedia323/project3/page18/"><img src="images/05.jpg"></a>
 </div>
 
 <div id="link1">
