project 3 links pt2

--- a/project3/page19/index.html
+++ b/project3/page19/index.html
@@ -47,7 +47,7 @@ p{
 <div class="tab">
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page20/index.html"><p>“What he said touched <br>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page20/"><p>“What he said touched <br>
 the deepest part of me.”<br>
 </p></a> 
 </div>
