--- a/project3/page2/index.html
+++ b/project3/page2/index.html
@@ -53,7 +53,7 @@ p{
 <a href="#link1"><h5>Certain moments <br>send adrenaline to the heart,<br>dry out the tongue, <br>and clog the lungs.</h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page3/index.html"><p>Like thunder they drown you in sound, no, like lightning they strike you across the larynx.<br><p>&nbsp;</p>Cough.</p></a> 
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page3/"><p>Like thunder they drown you in sound, no, like lightning they strike you across the larynx.<br><p>&nbsp;</p>Cough.</p></a> 
 </div>
 
 </div>
