--- a/project3/page20/index.html
+++ b/project3/page20/index.html
@@ -63,7 +63,7 @@ p{
 <body>
 
 <div id="pic">
-<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pagechorus4/index.html"><img src="images/05.jpg"></a>
+<a href="https://cobycid.github.io/interactivemedia323/project3/pagechorus4/"><img src="images/05.jpg"></a>
 </div>
 
 
