--- a/project3/page21/index.html
+++ b/project3/page21/index.html
@@ -55,11 +55,11 @@ p{
 <a href="#link1"><h5>And there is colored person who has not felt, briefly<br>
 or for long periods, with anguish sharp or dull,<br> 
 in varying degrees and to varying effect,<br> 
-<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page22/index.html">simple, naked, and unanswerable hatred;</a>
+<a href="https://cobycid.github.io/interactivemedia323/project3/page22/">simple, naked, and unanswerable hatred;</a>
 </h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page22b/index.html"><p>who has not wanted to smash any white<br>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page22b/"><p>who has not wanted to smash any white<br>
 face he may encounter in a day, to violate,<br>
 out of motives of the cruelest vengeance …</p></a> 
 </div>
