--- a/project3/page3/index.html
+++ b/project3/page3/index.html
@@ -73,7 +73,7 @@ p{
 </div>
 
 <div id="link2">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page4/index.html"><p>You assumed you two were the <br> only black people in her life.</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page4/"><p>You assumed you two were the <br> only black people in her life.</p></a>
 </div>
 
 </div>
