--- a/project3/page6/index.html
+++ b/project3/page6/index.html
@@ -61,7 +61,7 @@ h5{
 </div>
 
 <div id="link2">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pagechorus/index.html"><p>or because you are being<br> confused with another after <br>being so close to this other?</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page7/"><p>or because you are being<br> confused with another after <br>being so close to this other?</p></a>
 </div>
 
 </div>
