--- a/project3/page7/index.html
+++ b/project3/page7/index.html
@@ -56,7 +56,7 @@ p{
 <a href="#link1"><h5>In the next frame the pickup truck is in motion. <br>Its motion activates its darkness.<br>The pickup truck is a condition of darkness in motion. <br> It makes a dark subject<br>You mean a black subject. </h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page8/index.html"><p>No, a black object.</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page8/"><p>No, a black object.</p></a>
 </div>
 
 
