--- a/project3/page22/index.html
+++ b/project3/page22/index.html
@@ -37,7 +37,7 @@ p{
 <div class="tab">
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page23/index.html"><p>Youngman in his video doesn’t address<br>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page23/"><p>Youngman in his video doesn’t address<br>
 this type of anger: the anger built up<br>
 through experience and the quotidian<br>
 struggles against dehumanization every<br>
