--- a/project3/page23/index.html
+++ b/project3/page23/index.html
@@ -54,7 +54,7 @@ h5{
     will alter the ways in which one is perceived.</p></h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pagechorus5/index.html"><p>Yes, and this is how you are a citizen.</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/pagechorus5/"><p>Yes, and this is how you are a citizen.</p></a>
 </div>
 
 
