--- a/project3/page4/index.html
+++ b/project3/page4/index.html
@@ -60,7 +60,7 @@ though she never acknowledged her slippage</h5></a>
 </div>
 
 <div id="link2">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page5/index.html"><p>why not?</p></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page5/"><p>why not?</p></a>
 </div>
 
 </div>
