--- a/project3/page5/index.html
+++ b/project3/page5/index.html
@@ -45,7 +45,7 @@ p{
 <div class="tab">
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page6/index.html"><p>If this were a domestic tragedy, <br>and it as might well be,<br>this would be your fatal flaw your memory, <br>vessel of your feelings.</p></a> 
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page6/"><p>If this were a domestic tragedy, <br>and it as might well be,<br>this would be your fatal flaw your memory, <br>vessel of your feelings.</p></a> 
 </div>
 
 </div>
