project 3 links pt3

--- a/project3/page8/index.html
+++ b/project3/page8/index.html
@@ -46,7 +46,7 @@ p{
 
 <div class="tab">
 
-<a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pagechorus2/index.html"><h5>Then the pickup is beating the black object<br>
+<a href="https://cobycid.github.io/interactivemedia323/project3/pagechorus2/"><h5>Then the pickup is beating the black object<br>
 to the ground and the tire marks the crushed organs.</h5></a>   
 
 
