--- a/project3/pagechorus2/index.html
+++ b/project3/pagechorus2/index.html
@@ -68,11 +68,11 @@ a{
 </div>
 
 <div id="let">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pageimage2/index.html"> <h1>LET IT GO.</h1></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/pageimage2/"> <h1>LET IT GO.</h1></a>
 </div>
 
 <div id="come">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pageimage2/index.html"> <h1>COME ON.</h1></a>
+  <a href="https://cobycid.github.io/interactivemedia323/project3/pageimage2/"> <h1>COME ON.</h1></a>
 </div>
 
 </div>
