--- a/project3/pageimage5/index.html
+++ b/project3/pageimage5/index.html
@@ -89,7 +89,7 @@ a{
 <div id="container">
 
       <div id="pic">
-      <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/pageimage6/index.html"><img src="images/00.jpg"></a>
+      <a href="https://cobycid.github.io/interactivemedia323/project3/pageimage6/"><img src="images/00.jpg"></a>
       </div>
 
       <div id="move">
