--- a/project3/page9/index.html
+++ b/project3/page9/index.html
@@ -61,7 +61,7 @@ which turns out to be locked.
 </h5></a>   
 
 <div id="link1">
-  <a href="file:///Users/TheCoby/Desktop/WORK/SCHOOL/A323/interactivemedia323/project3/page10/index.html"><p>At the front door the bell is a 
+  <a href="https://cobycid.github.io/interactivemedia323/project3/page10/"><p>At the front door the bell is a 
 small round disc that you press firmly.</p></a> 
 </div>
 
